force-app/main/default/objects/smagicinteract__Internal_Notes__c/smagicinteract__Internal_Notes__c.object-meta.xml
<CustomObject>
    <description>This object will store the internal notes posted on Conversations.</description>
    <label>Internal Notes</label>
    <nameField>
        <label>Internal Notes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>