force-app/main/default/objects/smagicinteract__Internal_Notes__c/fields/smagicinteract__Body__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Body__c</fullName>
    <description>This field will contain the internal note text.</description>
    <label>Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>