force-app/main/default/objects/smagicinteract__Internal_Notes__c/fields/smagicinteract__ParentId__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Conversation Id</description>
    <label>Conversation</label>
    <referenceTo>smagicinteract__Conversation__c</referenceTo>
    <relationshipLabel>Internal Notes</relationshipLabel>
    <relationshipName>Internal_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>