force-app/main/default/objects/smagicinteract__Internal_Notes__c/fields/smagicinteract__Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Type__c</fullName>
    <description>This field contains the post type.</description>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>