force-app/main/default/objects/smagicinteract__Internal_Notes__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__ParentId__c</columns>
    <columns>smagicinteract__Body__c</columns>
    <columns>smagicinteract__Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>